--- a/index.html
+++ b/index.html
@@ -4,27 +4,30 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Struttura Discord</title>
+        <title>Discord</title>
 
         <link rel="stylesheet" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap" rel="stylesheet">
     </head>
     <body>
 
         <header class="flex">
 
             <nav class="header-top flex container">
-                <div class="logo crazy-bordered">
-                    LOGO
+                <div class="logo">
+                    <img src="./img/logo.svg" alt="Main Logo">
                 </div>
-                <ul class="main-menu crazy-bordered">
-                    <li>link</li>
-                    <li>link</li>
-                    <li>link</li>
-                    <li>link</li>
-                    <li>link</li>
+                <ul class="main-menu">
+                    <li>Scarica</li>
+                    <li>Perch&eacute; discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>
+                    <li>Assistenza</li>
                 </ul>
-                <div class="login crazy-bordered">
-                    login
+                <div class="login">
+                    <button class="btn login-btn">Accedi</button>
                 </div>
             </nav>
 
