implement-header-title-and-paragraph

--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
 
 
             <div id="jumbotron" class="flex-centered ">
-                <div class="jumbo-content crazy-bordered"></div>
+                <div class="jumbo-content crazy-bordered">
+                    <h1>Il tuo posto per parlare</h1>
+                    <p>Che tu faccia parte di un club scolastico&comma; gruppo di gamer&comma; comunit&agrave; artistica mondiale&comma; o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme&comma; Discord rende pi&ugrave; facile chiacchierare ogni giorno e ritrovarsi pi&ugrave; spesso&#46;</p>
+                </div>
             </div>
         </header>
 
