implement-content-mainsection-frog

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
             <div id="jumbotron" class="flex-centered ">
-                <div class="jumbo-content crazy-bordered">
+                <div class="jumbo-content">
                     <h1>Il tuo posto per parlare</h1>
                     <p>Che tu faccia parte di un club scolastico&comma; gruppo di gamer&comma; comunit&agrave; artistica mondiale&comma; o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme&comma; Discord rende pi&ugrave; facile chiacchierare ogni giorno e ritrovarsi pi&ugrave; spesso&#46;</p>
                     <button class="btn">&darr; Scarica per Mac</button>
@@ -45,8 +45,13 @@
         <main>
             <section class="frog">
                 <div class="container flex-centered">
-                    <div class="col big-col crazy-bordered"></div>
-                    <div class="col small-col crazy-bordered"></div>
+                    <div class="col big-col">
+                        <img src="./img/item1.svg" alt="discord text chat list facsimile">
+                    </div>
+                    <div class="col small-col">
+                        <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                        <p>I server discord sono organizzati in canali tematici in cui puoi collaborare&comma; Condividerre o semplicemente parlare della tua giornata senza intasare una chat di gruppo</p>
+                    </div>
                 </div>
             </section>
 
