implement-mainsection-wizard/alien

--- a/index.html
+++ b/index.html
@@ -57,15 +57,25 @@
 
             <section class="wizard bg-grey">
                 <div class="container flex-centered">
-                    <div class="col small-col crazy-bordered"></div>
-                    <div class="col big-col crazy-bordered"></div>
+                    <div class="col small-col">
+                        <h2>Dove trovarsi &eacute; facile</h2>
+                        <p>Mettiti comodo in un canale vocale quando hai tempo&#46; Gli amci nel tuo server possono vedere che sei l&igrave; e unirsi istanraneamente senza dover chiamare&#46;</p>
+                    </div>
+                    <div class="col big-col">
+                        <img src="./img/item2.svg" alt="Discord vocal channel facsimile">
+                    </div>
                 </div>
             </section>
 
             <section class="alien">
                 <div class="container flex-centered">
-                    <div class="col big-col crazy-bordered"></div>
-                    <div class="col small-col crazy-bordered"></div>
+                    <div class="col big-col">
+                        <img src="./img/item3.svg" alt="Discord server members list facsimile">
+                    </div>
+                    <div class="col small-col">
+                        <h2>Da pochi a un fandom</h2>
+                        <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso personalizzabile&#46; concedi ai membri poteri speciali&comma; crea canali privati&comma; e molto altro&#46;</p>
+                    </div>
                 </div>
             </section>
 
