implement-mainsection-king

--- a/index.html
+++ b/index.html
@@ -81,7 +81,14 @@
 
             <section class="king bg-grey">
                 <div class="container flex-centered">
-                    <div class="big-content"></div>
+                    <div class="big-content">
+                        <h2>Tecnologia affidabile per tenersi in contatto</h2>
+                        <p>Video a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza&#46; Fai ciao in video&comma; guarda gli amici giocare in streaming&comma; o riunitevi in una sessione di disegnocon la condivisione schermo&#46;</p>
+                        <img src="./img/item4-big.svg" alt="Discord videocall interface facsimile">
+                        <div class="stars"></div>
+                        <p id="start">Pronto a iniziare la tua avventura&quest;</p>
+                        <button class="btn btn-download-big">&darr; Scarica per Mac</button>
+                    </div>
                 </div>
             </section>
 
